--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ecpark/webpack-mpa-template",
+  "name": "webpack-mpa-template",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -32,6 +32,7 @@
     "eslint-loader": "^4.0.2",
     "file-loader": "^3.0.1",
     "glob": "^7.1.3",
+    "happypack": "^5.0.1",
     "html-webpack-plugin": "^3.2.0",
     "html-withimg-loader": "^0.1.16",
     "less": "^3.9.0",
@@ -55,7 +56,8 @@
     "webpack-bundle-analyzer": "^3.1.0",
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.2.1",
-    "webpack-merge": "^4.2.1"
+    "webpack-merge": "^4.2.1",
+    "svg-inline-loader": "^0.8.2"
   },
   "dependencies": {
     "jquery": "^3.3.1",
